@@ -392,3 +392,4 @@ v0.73.3:
     - Fixed '/townyadmin unclaim'.
     - Setup name prefix/suffix at login so names display correctly in other list plugins.
     - Added separate charges for own town spawn travel and public spawn travel (set in config.yml).
+    - Players in Enemy nations can no longer use spawn travel to opposing public towns.
